# vAmiga

./: .gitignore  .swiftlint.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  about.html  config.h  impressum.html  index.html  news.html
Core/: CMakeLists.txt  Headless.cpp  Headless.h  VAmiga.cpp  VAmiga.h  VAmigaConfig.cpp  VAmigaConfig.h  VAmigaHeadless.cpp  VAmigaHeadless.h  VAmigaTypes.h  config.cpp  config.h  debug.cpp  debug.h
Core/Components/: Amiga.cpp  Amiga.h  AmigaTypes.h  CMakeLists.txt
Core/FileSystems/: BlockStorage.cpp  BlockStorage.h  BootBlockImage.cpp  BootBlockImage.h  BootBlockImageTypes.h  CMakeLists.txt  DiskDoctor.cpp  DiskDoctor.h  FSAllocator.cpp  FSAllocator.h  FSBlock.cpp  FSBlock.h  FSComponent.cpp  FSComponent.h  FSDescriptor.cpp  FSDescriptor.h  FSDescriptors.cpp  FSDescriptors.h  FSDoctor.cpp  FSDoctor.h  FSExporter.cpp  FSExporter.h  FSExtension.h  FSImporter.cpp  FSImporter.h  FSNode.cpp  FSNode.h  FSObjects.cpp  FSObjects.h  FSPath.cpp  FSPath.h  FSStorage.cpp  FSStorage.h  FSTree.cpp  FSTree.h  FSTypes.h  FileSystem.cpp  FileSystem.h  FileSystem1.cpp  FileSystem2.cpp  (+6 more)
Core/Infrastructure/: Aliases.h  AppError.cpp  AppError.h  AppErrorTypes.h  BasicTypes.h  CMakeLists.txt  ChangeRecorder.h  CmdQueue.cpp  CmdQueue.h  CmdQueueTypes.h  Configurable.cpp  Configurable.h  Constants.h  CoreComponent.cpp  CoreComponent.h  CoreComponentTypes.h  CoreError.cpp  CoreError.h  CoreObject.cpp  CoreObject.h  CoreObjectTypes.h  Defaults.cpp  Defaults.h  Dumpable.cpp  DumpableTypes.h  Emulator.cpp  Emulator.h  EmulatorTypes.h  Error.cpp  Error.h  ErrorTypes.h  GuardList.cpp  GuardList.h  Host.cpp  Host.h  Inspectable.cpp  Inspectable.h  Loggable.cpp  Loggable.h  Macros.h  (+14 more)
Core/Media/: AnyFile.cpp  AnyFile.h  CMakeLists.txt  FileFactories.h  FloppyFile.h  Media.h  MediaError.cpp  MediaError.h  MediaFile.cpp  MediaFile.h  MediaFileTypes.h  Script.cpp  Script.h  Snapshot.cpp  Snapshot.h  Workspace.cpp
Core/Misc/: CMakeLists.txt
Core/Ports/: AudioPort.cpp  AudioPort.h  AudioPortTypes.h  CMakeLists.txt  ControlPort.cpp  ControlPort.h  ControlPortTypes.h  MidiManager.cpp  MidiManager.h  SampleRateDetector.cpp  SampleRateDetector.h  SerialPort.cpp  SerialPort.h  SerialPortTypes.h  VideoPort.cpp  VideoPort.h  VideoPortTypes.h
Core/RetroVault/: AmigaFileSystem.h  CBMFileSystem.h  CMakeLists.txt  Devices.h  Images.h
Core/Storage/: CMakeLists.txt  CmakeLists.txt  CmakeLists_rename.txt  DeviceDescriptors.cpp  DeviceDescriptors.h  DeviceError.cpp  DeviceError.h  DeviceTypes.h  DriveDescriptors.h  StorageTypes.h
Core/Utilities/: Animated.h  Annotations.h  BasicTypes.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Checksum.cpp  Checksum.h  Chrono.cpp  Chrono.h  Compression.cpp  Compression.h  Concurrency.cpp  Concurrency.h  IOUtils.cpp  IOUtils.h  Macros.h  MemUtils.cpp  MemUtils.h  Parser.cpp  Parser.h  RingBuffer.h  StringUtils.cpp  StringUtils.h
Core/utlib/: CMakeLists.txt
Emulator/: Amiga.cpp  Amiga.h  Amiga.hpp  AmigaConfig.h  AmigaEnums.h  AmigaPrivateTypes.h  AmigaPublicTypes.h  AmigaTypes.h  AmigaTypes.hpp  CMakeLists.txt  Dummy.cpp  Headless.cpp  Headless.h  HeadlessScripts.h  Makefile  PublicTypes.h  SelfTestScript.h  VA_ENUM.h  VAmiga.cpp  VAmiga.h  VAmigaCheck.cpp  VAmigaCheck.h  VAmigaCheckScripts.h  VAmigaConfig.cpp  VAmigaConfig.h  VAmigaHeadless.cpp  VAmigaTypes.h  config.cpp  config.h  main.cpp  vamiga.h  vamigaToBeRenamed.h
Emulator/Agnus/: Agnus.cpp  Agnus.h  Agnus.hpp  AgnusDDF.cpp  AgnusDma.cpp  AgnusEvents.cpp  AgnusInfo.cpp  AgnusPrivateTypes.h  AgnusPublicTypes.h  AgnusReg.cpp  AgnusRegisters.cpp  AgnusRegs.cpp  AgnusTypes.h  AgnusTypes.hpp  Beam.cpp  Beam.h  Beam.hpp  Blitter.cpp  Blitter.h  Bus.cpp  Bus.hpp  BusTypes.h  CMakeLists.txt  Copper.cpp  Copper.h  DDF.cpp  DDF.h  DDF.hpp  DmaDebugger.cpp  DmaDebugger.h  DmaDebugger.hpp  DmaDebuggerPublicTypes.h  DmaDebuggerTypes.h  DmaDebuggerTypes.hpp  Event.h  Event.hpp  EventHandler.cpp  EventHandler.h  EventHandlerPublicTypes.h  EventHandlerTypes.h  (+13 more)
Emulator/Base/: Aliases.h  Aliases.hpp  AmigaComponent.cpp  AmigaComponent.h  AmigaComponent.hpp  AmigaComponentTypes.h  AmigaObject.cpp  AmigaObject.h  AmigaObject.hpp  CMakeLists.txt  ChangeRecorder.h  ChangeRecorder.hpp  CmdQueue.cpp  CmdQueue.h  CmdQueueTypes.h  Configurable.cpp  Configurable.h  Constants.cpp  Constants.h  Constants.hpp  CoreComponent.cpp  CoreComponent.h  CoreComponentTypes.h  CoreObject.cpp  CoreObject.h  Debug.cpp  Debug.h  Debug.hpp  Defaults.cpp  Defaults.h  Dumpable.h  Error.cpp  Error.h  Error.hpp  ErrorTypes.h  Errors.cpp  Errors.h  Errors.hpp  GuardList.cpp  GuardList.h  (+39 more)
Emulator/CIA/: CIA.cpp  CIA.h  CIA.hpp  CIAEvents.cpp  CIAPublicTypes.h  CIARegisters.cpp  CIARegs.cpp  CIATypes.h  CIATypes.hpp  CMakeLists.txt  TOD.cpp  TOD.h  TOD.hpp  TODTypes.h
Emulator/CPU/: CMakeLists.txt  CPU.cpp  CPU.h  CPU.hpp  CPUModel.cpp  CPUPublicTypes.h  CPUTypes.h  CPUTypes.hpp  Makefile
Emulator/Components/: Amiga.cpp  Amiga.h  AmigaTypes.h  CMakeLists.txt  Emulator.cpp  Emulator.h  EmulatorTypes.h
Emulator/Denise/: CMakeLists.txt  Colors.cpp  Colors.h  Colors.hpp  Denise.cpp  Denise.h  Denise.hpp  DeniseDebugger.cpp  DeniseDebugger.h  DeniseInfo.cpp  DenisePublicTypes.h  DeniseRegisters.cpp  DeniseRegs.cpp  DeniseTypes.h  DeniseTypes.hpp  FrameBuffer.cpp  FrameBuffer.h  Makefile  PixelEngine.cpp  PixelEngine.h  PixelEngine.hpp  PixelEngineTypes.h  Recorder.cpp  Recorder.h  ScreenRecorder.cpp  ScreenRecorder.h  ScreenRecorder.hpp
Emulator/Drive/: Disk.cpp  Disk.h  Disk.hpp  DiskGeometry.cpp  DiskGeometry.h  DiskPublicTypes.h  DiskTypes.h  DiskTypes.hpp  Drive.cpp  Drive.h  Drive.hpp  DrivePublicTypes.h  DriveTypes.h  DriveTypes.hpp
Emulator/Expansion/: ZorroManager.cpp  ZorroManager.h
Emulator/FileSystems/: BootBlockImage.cpp  BootBlockImage.h  BootBlockImageTypes.h  BootBlocks.h  CMakeLists.txt  FSBitmapBlock.cpp  FSBitmapBlock.h  FSBitmapBlock.hpp  FSBitmapExtBlock.cpp  FSBitmapExtBlock.h  FSBitmapExtBlock.hpp  FSBlock.cpp  FSBlock.h  (+58 more)
LinuxGUI/: CMakeLists.txt  application.cc  application.h  core_actions.h  main.cc
(+3534 files in other folders)
